# switchr

./: .actrc  .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile
.github/: dependabot.yml
.github/workflows/: release.yml  rust-tests.yml
prds/: structure_and_deps.md  switchr.md
src/: cache.rs  config.rs  lib.rs  main.rs  models.rs  opener.rs  operations.rs  project_manager.rs  tui.rs
src/scanner/: cursor.rs  github.rs  gitlab.rs  local.rs  mod.rs
tests/: cli_integration.rs
